--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
   <body>
     <h1>我的第一个段落</h1>
-    <p style="visibility: hidden">
-老鬼夜里飘^4050|紫戟^4050|刘书羽^4050|李逍遥^4050|．踏雪的梅花^2048|非枯非榮^4050|执白守黑^4050|大邪王^4050|深藏身与名^6|丶单机游戏^3|。鹤澜^4050|相念^4050|粱葶歌^4050|霹雳★贝贝^4050|网友依旧^4050|霸気灬莮朲^4050|沐灬風^210|紫轩^4050|全职奶妈^4050|雪默ぃ^4050|默雪い^4050|大野狼丶^4050|凉冰^4050|菠箩小娘子^4050@09cb40b9196f1ed761c81ab0dddc99f3eab1c43f</p>
+    <p style="visibility: hidden">周四下午^4050|老鬼夜里飘^4050|紫戟^4050|刘书羽^4050|李逍遥^4050|．踏雪的梅花^2048|非枯非榮^4050|执白守黑^4050|大邪王^4050|深藏身与名^6|丶单机游戏^3|。鹤澜^4050|相念^4050|粱葶歌^4050|霹雳★贝贝^4050|网友依旧^4050|霸気灬莮朲^4050|沐灬風^210|紫轩^4050|全职奶妈^4050|雪默ぃ^4050|默雪い^4050|大野狼丶^4050|凉冰^4050|菠箩小娘子^4050@fe1b6eca965727d44691e5006952be2432734f5e</p>
     <!-- <h1>Beacon Platform</h1> -->
 
     <!-- include our own javascript : must be at the end -->
