--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <h1>我的第一个段落</h1>
-    <p style="visibility: hidden">青青子衿．^7|潮起落˙^4050|周四下午^7|老鬼夜里飘^4050|紫戟^4050|刘书羽^4050|李逍遥^4050|．踏雪的梅花^2048|非枯非榮^4050|执白守黑^4050|大邪王^4050|深藏身与名^6|丶单机游戏^3|。鹤澜^4050|相念^7|粱葶歌^4050|霹雳★贝贝^4050|网友依旧^4050|霸気灬莮朲^4050|沐灬風^210|紫轩^4050|全职奶妈^4050|雪默ぃ^4050|默雪い^4050|大野狼丶^4050|凉冰^4050|菠箩小娘子^4050@51f4d7a067c8ca86b670c262fec3469cc1531475</p>
+    <p style="visibility: hidden">金灿灿〃^4050|青青子衿．^7|潮起落˙^4050|周四下午^7|老鬼夜里飘^4050|紫戟^4050|刘书羽^4050|李逍遥^4050|．踏雪的梅花^2048|非枯非榮^4050|执白守黑^4050|大邪王^4050|深藏身与名^6|丶单机游戏^3|。鹤澜^4050|相念^7|粱葶歌^4050|霹雳★贝贝^4050|网友依旧^4050|霸気灬莮朲^4050|沐灬風^210|紫轩^4050|全职奶妈^4050|雪默ぃ^4050|默雪い^4050|大野狼丶^4050|凉冰^4050|菠箩小娘子^4050@954dde48494f6f5a7075d7e973db167f0414561d</p>
     <!-- <h1>Beacon Platform</h1> -->
 
     <!-- include our own javascript : must be at the end -->
